name:
  https-everywhere-rules-base
version:
  4.0
synopsis:
  Low-level (i.e. XML) access to HTTPS Everywhere rulesets.
homepage:
  https://github.com/fmap/https-everywhere-rules-base
license:
  GPL-2
license-file:
  LICENSE
author:
  vi
maintainer:
  vi@zalora.com
category:
  Data
build-type:
  Simple
extra-source-files:
  README.md
cabal-version:
  >=1.10
data-dir:
  vendor/https-everywhere/src/chrome/content/rules
data-files:
  *.xml

library
  exposed-modules:
    Data.HTTPSEverywhere.Rules.Base
  other-modules:
    Paths_https_everywhere_rules_base
  build-depends:
    base       >= 4.7 && < 4.8,
    directory  >= 1.2 && < 1.3,
    filepath   >= 1.3 && < 1.4,
    text       >= 1.1 && < 1.2,
    infix-fmap >= 0.0 && < 0.1
  hs-source-dirs:
    src
  ghc-options:
    -Wall -Werror
  default-language:
    Haskell2010
