name:
  https-everywhere-rules
version:
  0.1.0
synopsis:
  High-level access to HTTPS Everywhere rulesets.
homepage:
  https://github.com/fmap/https-everywhere-rules
license:
  MIT
license-file:
  LICENSE
author:
  vi
maintainer:
  vi@zalora.com
category:
  Data
build-type:
  Simple
extra-source-files:
  README.md
cabal-version:
  >=1.10
data-dir:
  vendor/https-everywhere/src/chrome/content/rules
data-files:
  *.xml

library
  exposed-modules:
    Data.HTTPSEverywhere.Rules
  other-modules:
    Data.HTTPSEverywhere.Rules.Internal,
    Data.HTTPSEverywhere.Rules.Internal.Parser,
    Data.HTTPSEverywhere.Rules.Internal.Raw,
    Data.HTTPSEverywhere.Rules.Internal.Types,
    Data.Text.ICU.Extras,
    Paths_https_everywhere_rules
  build-depends:
    base               >= 4.7  && < 4.9,
    attoparsec         >= 0.12 && < 0.13,
    directory          >= 1.2  && < 1.3,
    errors             >= 1.4  && < 2.1,
    filepath           >= 1.3  && < 1.5,
    functor-infix      >= 0.0  && < 0.1,
    http-client        >= 0.3  && < 0.5,
    lens               >= 4.3  && < 4.13,
    network            >= 2.6  && < 2.7,
    network-uri        >= 2.6  && < 2.7,
    pipes              >= 4.1  && < 4.2,
    string-conversions >= 0.3  && < 0.5,
    taggy-lens         >= 0.1  && < 0.2,
    text               >= 1.1  && < 1.3,
    text-icu           >= 0.6  && < 0.8
  hs-source-dirs:
    src
  default-language:
    Haskell2010
  ghc-options:
    -Wall

test-suite spec
  type:
    exitcode-stdio-1.0
  build-depends:
    base               >= 4.7  && < 4.9,
    attoparsec         >= 0.12 && < 0.13,
    directory          >= 1.2  && < 1.3,
    errors             >= 1.4  && < 2.1,
    filepath           >= 1.3  && < 1.5,
    functor-infix      >= 0.0  && < 0.1,
    hspec              >= 2.0  && < 2.2,
    http-client        >= 0.3  && < 0.5,
    lens               >= 4.3  && < 4.13,
    network            >= 2.6  && < 2.7,
    network-uri        >= 2.6  && < 2.7,
    pipes              >= 4.1  && < 4.2,
    string-conversions >= 0.3  && < 0.5,
    taggy-lens         >= 0.1  && < 0.2,
    text               >= 1.1  && < 1.3,
    text-icu           >= 0.6  && < 0.8,
    https-everywhere-rules
  main-is:
    Spec.hs
  hs-source-dirs:
    src,
    test
  default-language:
    Haskell2010
  cpp-options:
    -DTEST
  ghc-options:
    -Wall

flag build-examples
  description:
    Whether to build the programs under "examples/".
  default:
    True
  manual:
    True

executable redirect-proxy
  hs-source-dirs:
    examples
  main-is:
    RedirectProxy.hs
  build-depends:
    base >= 4.7  && < 4.9,
    bytestring,
    http-proxy,
    http-types,
    https-everywhere-rules,
    network-uri,
    wai
  if !(flag(build-examples))
    buildable:
      False
